# AutoCad-polystyrene-calculatio

./: .editorconfig  .gitignore  README.md  controller.py  mypy.ini  pyproject.toml
.github/workflows/: release.yml
assets/: uinterface.ui
autocad/: autocad.py  autocadtable.py  autocadutils.py
model/: __init__.py  autocad.py  format_data_for_waste.py  item.py  items.py  polyline.py  waste.py
model/table/: poly_table_data.py  table.py
model/text/: __init__.py  text.py  text_item.py
observer/: observer.py  subject.py
projectutils/: __init__.py  auxiliary_utulities.py  excel.py  test_auxiliary_utulities.py
view/: initial_data.py  results.py  table_data.py  uinterface.py  view.py  waste.py  window.py
view/components/: __init__.py  button.py  group_box.py  input.py  tree_widger.py
view/components/table/: cell.py  row.py  table_widget.py
