[tool.poetry]
name = "autocad-polystyrene-calculatio"
version = "0.1.0"
description = ""
authors = ["skysharkk <sky.light.blr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyautocad = "^0.2.0"
pywin32 = "^301"
PyQt5 = "^5.15.5"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
